RoboGit, logger framework, cleanups, improvements and fixes
- ADD: started to implement git GUI (RoboGit)
- ADD: global logger class and console logger for fast and common use
- CHG: code cleanups and improvements
- FIX: collecting log categories
- FIX: documentation fixes

--- a/Projects/MarcelJoachimKloubert.RoboGit/MarcelJoachimKloubert.RoboGitGui/Classes/GitTaskControl.resx
+++ b/Projects/MarcelJoachimKloubert.RoboGit/MarcelJoachimKloubert.RoboGitGui/Classes/GitTaskControl.resx
@@ -117,64 +117,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <metadata name="StatusStrip_Main.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+  <metadata name="ImageList_Logs.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
-  <metadata name="MenuStrip_Main.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>133, 17</value>
-  </metadata>
-  <metadata name="ImageList_GitTasks.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>274, 17</value>
-  </metadata>
-  <data name="ImageList_GitTasks.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
-    <value>
-        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
-        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAAU
-        CgAAAk1TRnQBSQFMAgEBAwEAARABAAEQAQABGAEAARgBAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
-        AwABYAMAARgDAAEBAQABCAYAAQkYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
-        AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
-        AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
-        AWYDAAGZAwABzAIAATMDAAIzAgABMwFmAgABMwGZAgABMwHMAgABMwH/AgABZgMAAWYBMwIAAmYCAAFm
-        AZkCAAFmAcwCAAFmAf8CAAGZAwABmQEzAgABmQFmAgACmQIAAZkBzAIAAZkB/wIAAcwDAAHMATMCAAHM
-        AWYCAAHMAZkCAALMAgABzAH/AgAB/wFmAgAB/wGZAgAB/wHMAQABMwH/AgAB/wEAATMBAAEzAQABZgEA
-        ATMBAAGZAQABMwEAAcwBAAEzAQAB/wEAAf8BMwIAAzMBAAIzAWYBAAIzAZkBAAIzAcwBAAIzAf8BAAEz
-        AWYCAAEzAWYBMwEAATMCZgEAATMBZgGZAQABMwFmAcwBAAEzAWYB/wEAATMBmQIAATMBmQEzAQABMwGZ
-        AWYBAAEzApkBAAEzAZkBzAEAATMBmQH/AQABMwHMAgABMwHMATMBAAEzAcwBZgEAATMBzAGZAQABMwLM
-        AQABMwHMAf8BAAEzAf8BMwEAATMB/wFmAQABMwH/AZkBAAEzAf8BzAEAATMC/wEAAWYDAAFmAQABMwEA
-        AWYBAAFmAQABZgEAAZkBAAFmAQABzAEAAWYBAAH/AQABZgEzAgABZgIzAQABZgEzAWYBAAFmATMBmQEA
-        AWYBMwHMAQABZgEzAf8BAAJmAgACZgEzAQADZgEAAmYBmQEAAmYBzAEAAWYBmQIAAWYBmQEzAQABZgGZ
-        AWYBAAFmApkBAAFmAZkBzAEAAWYBmQH/AQABZgHMAgABZgHMATMBAAFmAcwBmQEAAWYCzAEAAWYBzAH/
-        AQABZgH/AgABZgH/ATMBAAFmAf8BmQEAAWYB/wHMAQABzAEAAf8BAAH/AQABzAEAApkCAAGZATMBmQEA
-        AZkBAAGZAQABmQEAAcwBAAGZAwABmQIzAQABmQEAAWYBAAGZATMBzAEAAZkBAAH/AQABmQFmAgABmQFm
-        ATMBAAGZATMBZgEAAZkBZgGZAQABmQFmAcwBAAGZATMB/wEAApkBMwEAApkBZgEAA5kBAAKZAcwBAAKZ
-        Af8BAAGZAcwCAAGZAcwBMwEAAWYBzAFmAQABmQHMAZkBAAGZAswBAAGZAcwB/wEAAZkB/wIAAZkB/wEz
-        AQABmQHMAWYBAAGZAf8BmQEAAZkB/wHMAQABmQL/AQABzAMAAZkBAAEzAQABzAEAAWYBAAHMAQABmQEA
-        AcwBAAHMAQABmQEzAgABzAIzAQABzAEzAWYBAAHMATMBmQEAAcwBMwHMAQABzAEzAf8BAAHMAWYCAAHM
-        AWYBMwEAAZkCZgEAAcwBZgGZAQABzAFmAcwBAAGZAWYB/wEAAcwBmQIAAcwBmQEzAQABzAGZAWYBAAHM
-        ApkBAAHMAZkBzAEAAcwBmQH/AQACzAIAAswBMwEAAswBZgEAAswBmQEAA8wBAALMAf8BAAHMAf8CAAHM
-        Af8BMwEAAZkB/wFmAQABzAH/AZkBAAHMAf8BzAEAAcwC/wEAAcwBAAEzAQAB/wEAAWYBAAH/AQABmQEA
-        AcwBMwIAAf8CMwEAAf8BMwFmAQAB/wEzAZkBAAH/ATMBzAEAAf8BMwH/AQAB/wFmAgAB/wFmATMBAAHM
-        AmYBAAH/AWYBmQEAAf8BZgHMAQABzAFmAf8BAAH/AZkCAAH/AZkBMwEAAf8BmQFmAQAB/wKZAQAB/wGZ
-        AcwBAAH/AZkB/wEAAf8BzAIAAf8BzAEzAQAB/wHMAWYBAAH/AcwBmQEAAf8CzAEAAf8BzAH/AQAC/wEz
-        AQABzAH/AWYBAAL/AZkBAAL/AcwBAAJmAf8BAAFmAf8BZgEAAWYC/wEAAf8CZgEAAf8BZgH/AQAC/wFm
-        AQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gBAAHw
-        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD//wAA/8B9AP/UAAK/wH0
-        AXgBVgFQAfQE/zYAARARAAESAwAM/wF4AVYBLgb/MwAB9B8ABP8BeAFWAS4iAAH/IAABDhEABVcBVgH/
-        AQABeAFXAS42AAEOAQAB8gwAAf8PAAFXBHgBVwH0AQACVgEuOAABDg0AAfMRAAH2AX0BVwH0AS8BVwF4
-        AS4pAAHvBQABDggAAe8IAAG8BQABDxAAAfYBfQFXAVYBVwJ4KwABBwMAARQHAAHvCQABDhcAAfYBfQFW
-        AVcCeCQAAf8IAAHyAQABFAsAAQcGAAP/AwAD/wYAAf8IAAH/AX0CNQF4AZgB/wQuAVAfAAHwCAABbQYA
-        ARQB9AUAAfMTAAH/CgABVgFXAjUBVwFQAlYDVwH0UgABmAF4AQABVgFXAjUBVwE1AVYCeAGYIQABExYA
-        Ae8aAAF4AVcBUAH/AlYDNQFWJgAB9wH/CQAB/woAAfMNAAHzCwACeAFXAZkB8AF4AVYBVwF4AS8oAAH0
-        BwABECYAAVYFVwF4Af8B9AH/KAAB/wUAAfcnAAH/AVYDfQFWAf8BVgFXAVYB/0AAAW0EAAHvEAAF/wGY
-        AVcBNQFWAS9bAAGZAVcBNQFXAVBbAAH/AVABnwFWXgAB/98AAUIBTQE+BwABPgMAASgDAAFgAwABGAMA
-        AQEBAAEBBQABIAEBFgAD/wEACf8DAAn/AwAH/wHgAT8DAAb/AcABAAEHAwAD/wHgAQABAwGAAQABAwMA
-        AfABHAEHAYABAAEBAf8BgAH/AwABwAEcAQMBgAEIAQAB+AEIAf8DAAHAARwBAQEAARgBAAH4AQgB/wMA
-        AcABHAEBAQABPAEAAf8BAAH/AwABwAE+AQEBAAE+AQAB/wEBAf8DAAHAARwBAQGAAX8BAAH/AQMB/wMA
-        AcABCAEDAYABHAEAAf8BAAEPAwAB4AEAAQcBwAEcAQEB/wGAAQcDAAH4AQABHwHwARwBDwH+AUABDwMA
-        AfgBAAEfAfABHAEPAf4BAAF/AwAB/gEAAR8B+AEcAQ8B/gEAAX8DAAH/AYABPwH/AYABHwH/AQABPwMA
-        Af8BwAF/Af8BwAE/Af8BAAEfAwAE/wHgAX8B/wGAAR8DAAf/AfwBHwMAB/8B/AE/AwAI/wF/AwAJ/wMA
-        Cf8DAAs=
-</value>
-  </data>
 </root>
